Set overflow: hidden to k-virtual-item elements in order to prevent overflowing content

--- a/styles/web/common/virtuallist.less
+++ b/styles/web/common/virtuallist.less
@@ -43,6 +43,7 @@
     position: absolute;
     width: 100%;
     box-sizing: border-box;
+    overflow: hidden;
 }
 
 .k-popup .k-list .k-item > .k-group,
